--- a/static/css/base.css
+++ b/static/css/base.css
@@ -134,15 +134,12 @@ body {
 }
 
 .btn-red {
-    margin: 2px;
-    padding: 5px;
-    border-radius: 3px;
     background: var(--main-color-sec);
     color: white;
 }
 
 .edit-btn {
-    margin: 2px;
+    margin-top: 3px;
     padding: 5px;
     border-radius: 3px;
     background-color: var(--main-color-sec);
@@ -155,6 +152,9 @@ body {
 }
 
 .delete-btn {
+    margin-top: 3px;
+    padding: 5px;
+    border-radius: 3px;
     background-color: var(--red);
     color: #000;
 }
