--- a/static/css/base.css
+++ b/static/css/base.css
@@ -143,7 +143,7 @@ body {
     padding: 5px;
     border-radius: 3px;
     background-color: var(--main-color-sec);
-    color: var(--text-main);
+    color: #fff;
 }
 
 .edit-btn:hover {
