--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -130,7 +130,7 @@
 								<i class="fas fa-lock"></i>
 							</span>
 						</button>
-						<p class="font-weight-bold text-danger my-0">
+						<p class="font-weight-bold text-main my-0">
 							<span class="icon">
 								<i class="fas fa-exclamation-circle"></i>
 							</span>
