--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -16,7 +16,7 @@
             <div class="col-12 col-md-6">
                 <hr>
                 <h1 class="logo-font mb-4">Product Management</h1>
-                <h5 class="text-main">Add a Product</h5>
+                <h2 class="text-main">Add a Product</h2>
                 <hr>
             </div>
         </div>
@@ -27,9 +27,15 @@
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
+                            <div class="form-group">
+                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                {{ field | as_crispy_field }}
+                            </div>
                         {% else %}
-                            {{ field }}
+                            <div class="form-group">
+                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                {{ field }}
+                            </div>
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
@@ -39,7 +45,7 @@
                 </form>
             </div>
         </div>
-    </div>
+
 {% endblock %}
 
 {% block postloadjs %}
