--- a/info/templates/teams/edit_team_member.html
+++ b/info/templates/teams/edit_team_member.html
@@ -27,12 +27,12 @@
                     {% for field in form %}
                         {% if field.name != 'image' %}
                             <div class="form-group">
-                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                <label for="{{ field.id_for_label }}" class="visually-hidden">{{ field.label }}</label>
                                 {{ field | as_crispy_field }}
                             </div>
                         {% else %}
                             <div class="form-group">
-                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                <label for="{{ field.id_for_label }}" class="visually-hidden">{{ field.label }}</label>
                                 {{ field }}
                             </div>
                         {% endif %}
