--- a/info/templates/teams/edit_team_member.html
+++ b/info/templates/teams/edit_team_member.html
@@ -22,20 +22,21 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'edit_team_member' teams.id %}" class="form mb-2" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'edit_team_member' teams.id %}" class="form mb-2"
+                    enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
-                        {% if field.name != 'image' %}
-                            <div class="form-group">
-                                <label for="{{ field.id_for_label }}" class="visually-hidden">{{ field.label }}</label>
-                                {{ field | as_crispy_field }}
-                            </div>
-                        {% else %}
-                            <div class="form-group">
-                                <label for="{{ field.id_for_label }}" class="visually-hidden">{{ field.label }}</label>
-                                {{ field }}
-                            </div>
-                        {% endif %}
+                    {% if field.name != 'image' %}
+                    <div class="form-group">
+                        <label for="{{ field.id_for_label }}" class="visually-hidden">{{ field.label }}</label>
+                        {{ field | as_crispy_field }}
+                    </div>
+                    {% else %}
+                    <div class="form-group">
+                        <label for="{{ field.id_for_label }}" class="visually-hidden">{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                    {% endif %}
                     {% endfor %}
                     <div class="text-right">
                         <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
@@ -44,5 +45,5 @@
                 </form>
             </div>
         </div>
-
+    </div>
 {% endblock %}
