--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -43,13 +43,13 @@
                         {% if product.spicerating %}
                             <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spicerating }} / 5</small>
                         {% else %}
-                            <small class="text-main">No Rating</small>
+                            <small class="text-white">No Rating</small>
                         {% endif %}
                     </div>
                         {% if request.user.is_superuser %}
                             <small class="ml-3">
-                                <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                <a href="{% url 'edit_product' product.id %}" class="edit-btn">Edit</a> |
+                                <a class="delete-btn" href="{% url 'delete_product' product.id %}">Delete</a>
                             </small>
                         {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
@@ -69,10 +69,11 @@
                                 <div class="col-12">
                                     <p class="mt-3"><strong>Quantity:</strong></p>
                                     <div class="form-group w-50">
+                                        <label class="visually-hidden" for="id_qty_{{ product.id }}">Quantity:</label>
                                         <div class="input-group input-group-{{ item.item_id }}">
                                             <div class="input-group-prepend">
                                                 <button class="decrement-qty btn btn-red rounded-0"
-                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}" aria-label="Decrease Quantity">
                                                     <span class="icon">
                                                         <i class="fas fa-minus"></i>
                                                     </span>
@@ -84,7 +85,7 @@
                                                 id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
                                                 <button class="increment-qty btn btn-red rounded-0"
-                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}" aria-label="Increase Quantity">
                                                     <span class="icon">
                                                         <i class="fas fa-plus"></i>
                                                     </span>
