--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -8,14 +8,14 @@
 <hr>
 <h1 class="logo-font mb-4">{% trans "Sign Out" %}</h1>
 <hr>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="text-main">{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+  <input class="btn-outline" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
+  <a class="btn-red rounded-0" href="{% url 'home' %}">Cancel</a>
   <button type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
