--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -27,10 +27,12 @@
                     {% for field in form %}
                     {% if field.name != 'image' %}
                     <div class="form-group">
+                        <label for="field-id">Label Text:</label>
                         {{ field | as_crispy_field }}
                     </div>
                     {% else %}
                     <div class="form-group">
+                        <label for="field-id">Label Text:</label>
                         {{ field }}
                     </div>
                     {% endif %}
@@ -42,7 +44,7 @@
                 </form>
             </div>
         </div>
-    </div>
+
 {% endblock %}
 
 {% block postloadjs %}
