fix: text-muted to text-main in checkout success

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -75,7 +75,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Delivering To:</small>
+                        <p class="text-main">Delivering To:</p>
                     </div>
                 </div>
 
@@ -159,7 +159,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Billing Info:</small>
+                        <p class="text-main">Billing Info:</p>
                     </div>
                 </div>
 
