--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -27,10 +27,12 @@
                 {% for field in form %}
                 {% if field.name != 'image' %}
                 <div class="form-group">
+                    {{ field.label_tag }}
                     {{ field | as_crispy_field }}
                 </div>
                 {% else %}
                 <div class="form-group">
+                    <label for="{{ field.id_for_label }}">Image</label>
                     {{ field }}
                 </div>
                 {% endif %}
