--- a/static/css/base.css
+++ b/static/css/base.css
@@ -261,7 +261,7 @@ input[name='q']::placeholder {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: #000;
+    background-color: var(--main-color-sec);
     border: 1px solid #000;
     padding: .375rem .75rem;
     font-size: 1rem;
