--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -39,9 +39,9 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% csrf_token %}
   {{ form|crispy }}
   {% if redirect_field_value %}
-  <input class="btn-outline" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
   {% endif %}
-  <a class="btn-red rounded-0" href="{% url 'home' %}">Home</a>
+  <a class="btn btn-outline" href="{% url 'home' %}">Home</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
   <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
