--- a/info/templates/teams/edit_team_member.html
+++ b/info/templates/teams/edit_team_member.html
@@ -2,46 +2,71 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <hr>
-                <h1 class="logo-font mb-4">Staff Management</h1>
-                <h2 class="text-main">Add a Team Member</h2>
-                <hr>
-            </div>
+<div class="overlay"></div>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <hr>
+            <h1 class="logo-font mb-4">Staff Management</h1>
+            <h2 class="text-main">Add a Team Member</h2>
+            <hr>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'edit_team_member' teams.id %}" class="form mb-2"
-                    enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                    {% if field.name != 'image' %}
-                    <div class="form-group">
-                        {{ field | as_crispy_field }}
-                    </div>
-                    {% else %}
-                    <div class="form-group">
-                        {{ field }}
-                    </div>
-                    {% endif %}
-                    {% endfor %}
-                    <div class="text-right">
-                        <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
-                        <button class="btn btn-red rounded-0" type="submit">Update Team Member</button>
-                    </div>
-                </form>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <form method="POST" action="{% url 'edit_team_member' teams.id %}" class="form mb-2"
+                enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form %}
+                {% if field.name != 'image' %}
+                <div class="form-group">
+                    {{ field | as_crispy_field }}
+                </div>
+                {% else %}
+                <div class="form-group">
+                    {{ field }}
+                </div>
+                {% endif %}
+                {% endfor %}
+                <div class="text-right">
+                    <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
+                    <button class="btn btn-red rounded-0" type="submit">Update Team Member</button>
+                    <button type="button" class="delete-btn btn btn-danger rounded-0" data-toggle="modal"
+                        data-target="#deleteMember">
+                        Delete
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteMember" tabindex="-1" role="dialog" aria-labelledby="deleteMemberLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header dark-green-block text-white">
+                <h5 class="modal-title logo-font" id="deleteMemberLabel">Delete Staff Member</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this staff member?
+            </div>
+            <div class="modal-footer bg-red">
+                <button type="button" class="btn btn-outline rounded-0" data-dismiss="modal">Close</button>
+                <a class="btn btn-red rounded-0" href="{% url 'delete_team_member' teams.id %}">Delete</a>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
