--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -39,11 +39,36 @@
                     <div class="text-right">
                         <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
                         <button class="btn btn-red rounded-0" type="submit">Edit Product</button>
+                        <button type="button" class="delete-btn btn btn-danger rounded-0" data-toggle="modal"
+                        data-target="#deleteProduct">
+                        Delete
+                    </button>
                     </div>
                 </form>
             </div>
         </div>
         </div>
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteProduct" tabindex="-1" role="dialog" aria-labelledby="deleteProductLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header dark-green-block text-white">
+                <h5 class="modal-title logo-font" id="deleteProductLabel">Delete Product</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this staff Product?
+            </div>
+            <div class="modal-footer bg-red">
+                <button type="button" class="btn btn-outline rounded-0" data-dismiss="modal">Close</button>
+                <a class="btn btn-red rounded-0" href="{% url 'delete_product' product.id %}">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
