clean: allauth templates

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -61,7 +61,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                Are you sure you want to delete this staff Product?
+                Are you sure you want to delete this Product?
             </div>
             <div class="modal-footer bg-red">
                 <button type="button" class="btn btn-outline rounded-0" data-dismiss="modal">Close</button>
