fix: rename btn-red to btn-green

--- a/events/templates/book_event.html
+++ b/events/templates/book_event.html
@@ -42,7 +42,7 @@
                         </select>
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-red rounded-0">Continue</button>
+                    <button type="submit" class="btn btn-green rounded-0">Continue</button>
                 </form>
             </div>
         </div>
