--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,7 +21,7 @@
             and sip exquisite tequilas. Bienvenidos to an unforgettable dining experience. ¡Viva Taco Y Tequila!
         </p>
         <p>
-            <a href="{% url 'products' %}" class="btn btn-red my-2 logo-font">Explore Some Spice</a>
+            <a href="{% url 'products' %}" class="btn btn-green rounded-0 my-2 logo-font">Explore Some Spice</a>
         </p>
     </div>
 </section>
@@ -41,7 +41,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a href="{% url 'products' %}?category=drinks_tequila,drinks_softdrinks,drinks_beers"
-                                    class="btn btn-sm btn-red text-white">
+                                    class="btn btn-green rounded-0">
                                     Shop Drinks
                                 </a>
                             </div>
@@ -63,7 +63,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a href="{% url 'products' %}?category=mealkits_mild,mealkits_medium,mealkits_hot,mealkits_veryhot"
-                                    class="btn btn-sm btn-outline">
+                                    class="btn rounded-0 btn-outline">
                                     Shop Food
                                 </a>
                             </div>
@@ -84,7 +84,7 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="{% url 'book_event' %}" class="btn btn-sm btn-red text-white">
+                                <a href="{% url 'book_event' %}" class="btn btn-green rounded-0">
                                     Book Event
                                 </a>
                             </div>
