--- a/info/templates/teams/add_team_member.html
+++ b/info/templates/teams/add_team_member.html
@@ -38,7 +38,7 @@
                 {% endfor %}
                 <div class="text-right">
                     <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
-                    <button class="btn btn-red rounded-0" type="submit">Add Team Member</button>
+                    <button class="btn btn-green rounded-0" type="submit">Add Team Member</button>
                 </div>
             </form>
         </div>
