--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <div class="input-group input-group-{{ item.item_id }}">
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-red rounded-0" data-item_id="{{ item.item_id }}"
+                <button class="decrement-qty btn btn-sm btn-green rounded-0" data-item_id="{{ item.item_id }}"
                     id="decrement-qty_{{ item.item_id }}" aria-label="decrease quantity">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
@@ -14,7 +14,7 @@
                 value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id }}"
                 id="increment-qty_{{ item.item_id }}" aria-label="increase quantity">
             <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-red rounded-0" data-item_id="{{ item.item_id }}"
+                <button class="increment-qty btn btn-sm btn-green rounded-0" data-item_id="{{ item.item_id }}"
                     id="increment-qty_{{ item.item_id }}" aria-label="increase quantity">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
