--- a/events/templates/event_booked.html
+++ b/events/templates/event_booked.html
@@ -33,7 +33,7 @@
                             {% endfor %}
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-red rounded-0 mt-3">Book</button>
+                    <button type="submit" class="btn btn-green rounded-0 mt-3">Book</button>
                 </form>
             </div>
         </div>
