--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,8 +51,8 @@
                 </div>
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}" class="edit-btn">Edit</a> |
-                        <a class="delete-btn" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a href="{% url 'edit_product' product.id %}" class="btn edit-btn rounded-0">Edit</a>
+                        <a class="btn delete-btn rounded-0" href="{% url 'delete_product' product.id %}">Delete</a>
                     </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
@@ -75,7 +75,7 @@
                                     <label class="visually-hidden" for="id_qty_{{ product.id }}">Quantity:</label>
                                     <div class="input-group input-group-{{ item.item_id }}">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-red rounded-0"
+                                            <button class="decrement-qty btn btn-green rounded-0"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}"
                                                 aria-label="Decrease Quantity">
                                                 <span class="icon">
@@ -86,7 +86,7 @@
                                         <input class="form-control qty_input" type="number" name="quantity" value="1"
                                             min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-red rounded-0"
+                                            <button class="increment-qty btn btn-green rounded-0"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}"
                                                 aria-label="Increase Quantity">
                                                 <span class="icon">
@@ -104,7 +104,7 @@
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-red rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-green rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
