--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
 							<input class="form-control border border-black rounded-0" type="text" name="q"
 								placeholder="Search our site" id="search">
 							<div class="input-group-append">
-								<button class="form-control btn btn-red border border-black rounded-0" type="submit"
+								<button class="form-control btn btn-green border border-black rounded-0" type="submit"
 									aria-label="Search">
 									<span class="icon-dark">
 										<i class="fas fa-search"></i>
