--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -30,7 +30,7 @@
                             <label for="subscribe_email" aria-label="email" aria-hidden="true"></label>
                             <input class="form-control" type="email" placeholder="Recipient's username" id="subscribe_email"
                                 aria-label="Recipient's username" aria-describedby="subscribe-submit">
-                            <button class="btn btn-red" aria-label="Subscribe to newsletter" id="subscribe-submit"
+                            <button class="btn btn-green" aria-label="Subscribe to newsletter" id="subscribe-submit"
                                 type="submit"><i class="fas fa-paper-plane"></i></button>
                         </div>
                     </form>
