--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -4,7 +4,7 @@
             aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div><i class="icon-dark fas fa-search fa-lg"></i></div>
-                <p class="my-0">Search</p>
+                <p class="my-0 mobile-text">Search</p>
             </div>
         </a>
         <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
@@ -31,7 +31,7 @@
             aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div><i class="icon-dark fas fa-user fa-lg"></i></div>
-                <p class="my-0">My Account</p>
+                <p class="my-0 mobile-text">My Account</p>
             </div>
         </a>
         <div class="dropdown-menu border-0" aria-labelledby="mobile-user-options">
@@ -52,7 +52,7 @@
             href="{% url 'view_bag' %}">
             <div class="text-center">
                 <div><i class="icon-dark fas fa-shopping-bag fa-lg"></i></div>
-                <p class="my-0">
+                <p class="my-0 mobile-text">
                     {% if grand_total %}
                     £{{ grand_total|floatformat:2 }}
                     {% else %}
