fix: add widget id to form

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -32,7 +32,7 @@
                         </div>
                     {% else %}
                         <div class="form-group">
-                            <label for="{{ field.id_for_label }}">Image</label>
+                            <label for="{{ {{ widget.checkbox_id }} }}">Image</label>
                                 {{ field }}
                         </div>
                     {% endif %}
