--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -25,13 +25,14 @@
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
-                <label for="{{ {{ widget.checkbox_id }} }}">Image</label>
+                    <label for="new-image" class="visually-hidden">New Image</label>
                     {% if field.name != 'image' %}
                         <div class="form-group">
                             {{ field | as_crispy_field }}
                         </div>
                     {% else %}
                         <div class="form-group">
+                            <label for="{{ widget.checkbox_id }}">Image</label>
                                 {{ field }}
                         </div>
                     {% endif %}
