--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -12,6 +12,7 @@
     {{ widget.input_text }}
 {% endif %}
 <span class="btn btn-green rounded-0 btn-file">
+    <label for="new-image" hidden>Image label</label>
     Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
 </span>
 <strong><p class="text-danger" id="filename"></p></strong>
