--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -55,7 +55,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header dark-green-block text-white">
-                <h5 class="modal-title logo-font" id="deleteProductLabel">Delete Product</h5>
+                <a class="modal-title logo-font" id="deleteProductLabel">Delete Product</a>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
